# Calculator

./: CMakeLists.txt  README.md
src/: Calculator.cpp  Calculator.hpp  EquationParser.cpp  EquationParser.hpp  EquationVerifier.cpp  EquationVerifier.hpp  main.cpp
src/ut/: TestCalculator.cpp  TestEquationParser.cpp  TestEquationVerifier.cpp
